fixing contact section

--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,5 @@
+## Contact Us
+
 Get in touch
 
 Say [Hi](mailto:realzeealeid@gmail.com) or find me on other platforms: [GitHub](https://github.com/Zee-al-eid) & [LinkedIn](https://www.linkedin.com/in/zee-al-eid-ahmed-7544621ba)
